<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:foregroundGravity="center_vertical|clip_horizontal|center">


    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginStart="50dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="24dp"
        android:foregroundGravity="center_vertical|clip_horizontal|center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="15dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingLeft="32dp"
            android:paddingTop="16dp"
            android:paddingRight="32dp"
            android:paddingBottom="16dp">

            <TextView
                android:id="@+id/region"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:foregroundGravity="center_vertical|clip_horizontal|center"
                android:gravity="center"
                android:maxEms="6"
                android:text="@string/region"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/activeCases"
                app:layout_constraintStart_toStartOf="@+id/activeCasestxt"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/totalInfectedtxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:foregroundGravity="center_vertical|clip_horizontal|center"
                android:gravity="center"
                android:text="@string/totalInfectedb"
                android:textColor="#000000"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/newDeceasedtxt"
                app:layout_constraintTop_toBottomOf="@+id/newDeceasedtxt" />

            <TextView
                android:id="@+id/newDeceasedtxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:text="@string/newDeceasedb"
                android:textColor="#000000"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/deceasedtxt"
                app:layout_constraintTop_toBottomOf="@+id/deceasedtxt" />

            <TextView
                android:id="@+id/deceasedtxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:text="@string/deceasedb"
                android:textColor="#000000"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/newRecoveredtxt"
                app:layout_constraintTop_toBottomOf="@+id/newRecoveredtxt" />

            <TextView
                android:id="@+id/activeCasestxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="24dp"
                android:gravity="center"
                android:text="@string/activeCasesb"
                android:textColor="#000000"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/region" />

            <TextView
                android:id="@+id/newRecoveredtxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:text="@string/newRecoveredb"
                android:textColor="#000000"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/recoveredtxt"
                app:layout_constraintTop_toBottomOf="@+id/recoveredtxt" />

            <TextView
                android:id="@+id/recoveredtxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:text="@string/recoveredb"
                android:textColor="#000000"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/newInfectedtxt"
                app:layout_constraintTop_toBottomOf="@+id/newInfectedtxt" />

            <TextView
                android:id="@+id/newInfectedtxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:text="@string/newInfectedb"
                android:textColor="#000000"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/activeCasestxt"
                app:layout_constraintTop_toBottomOf="@+id/activeCasestxt" />

            <TextView
                android:id="@+id/totalInfected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:gravity="center"
                android:text="@string/totalInfected"
                android:textColor="#000000"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/totalInfectedtxt"
                app:layout_constraintStart_toEndOf="@+id/totalInfectedtxt"
                app:layout_constraintTop_toTopOf="@+id/totalInfectedtxt"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/newDeceased"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:text="@string/newDeceased"
                android:textColor="#000000"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/newDeceasedtxt"
                app:layout_constraintStart_toEndOf="@+id/newDeceasedtxt"
                app:layout_constraintTop_toTopOf="@+id/newDeceasedtxt" />

            <TextView
                android:id="@+id/deceased"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:text="@string/deceased"
                android:textColor="#000000"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/deceasedtxt"
                app:layout_constraintStart_toEndOf="@+id/deceasedtxt"
                app:layout_constraintTop_toTopOf="@+id/deceasedtxt" />

            <TextView
                android:id="@+id/newRecovered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:text="@string/newRecovered"
                android:textColor="#000000"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/newRecoveredtxt"
                app:layout_constraintStart_toEndOf="@+id/newRecoveredtxt"
                app:layout_constraintTop_toTopOf="@+id/newRecoveredtxt" />

            <TextView
                android:id="@+id/recovered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:text="@string/recovered"
                android:textColor="#000000"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/recoveredtxt"
                app:layout_constraintStart_toEndOf="@+id/recoveredtxt"
                app:layout_constraintTop_toTopOf="@+id/recoveredtxt"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/newInfected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:text="@string/newInfected"
                android:textColor="#000000"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/newInfectedtxt"
                app:layout_constraintStart_toEndOf="@+id/newInfectedtxt"
                app:layout_constraintTop_toTopOf="@+id/newInfectedtxt" />

            <TextView
                android:id="@+id/activeCases"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:text="@string/activeCases"
                android:textColor="#000000"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/activeCasestxt"
                app:layout_constraintStart_toEndOf="@+id/activeCasestxt"
                app:layout_constraintTop_toTopOf="@+id/activeCasestxt" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>